# dailymotion-user-registration

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
app/: config.py  database.py  dependencies.py  exceptions.py  main.py
app/models/: user.py
app/repositories/: user_repository.py
app/routers/: users.py
app/services/: email_service.py  user_service.py
migrations/: 001_create_users_table.sql
tests/: conftest.py  test_activation.py  test_registration.py
